objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Accel_Booth_Kit__c</fullName>
        <label>Accel Booth Kit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accel_Cost_Share_Percentage__c</fullName>
        <label>Accel Cost Share Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accel_Warehouse_Gathered_Date__c</fullName>
        <label>Accel Warehouse Gathered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing</relationshipLabel>
        <relationshipName>Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Tracking_Number__c</fullName>
        <label>Additional Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Warehouse_Deadline__c</fullName>
        <label>Advanced Warehouse Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advanced_Warehouse_Name__c</fullName>
        <label>Advanced Warehouse Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Warehouse_Shipping__c</fullName>
        <label>Advanced Warehouse Shipping</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Flight_Number__c</fullName>
        <label>Airline &amp; Flight Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Flight_Number_to_Event__c</fullName>
        <label>Airline &amp; Flight Number (to Event)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_Name_to_Event__c</fullName>
        <label>Airport Name (to Event)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amusement_Type__c</fullName>
        <label>Amusement Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amusement Machine</fullName>
                </value>
                <value>
                    <fullName>Touchtunes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amusements_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amusements Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsfA4z</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amusements_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amusements Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsfA59</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Arrival_Time_to_Event__c</fullName>
        <inlineHelpText>Flight Arrival Time when flying into the event.</inlineHelpText>
        <label>Arrival Time (to Event)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_to_Event_Date__c</fullName>
        <label>Arrival to Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Due_Date__c</fullName>
        <label>Artwork Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Location_Approval__c</fullName>
        <label>Artwork Location Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_To_RM__c</fullName>
        <label>Artwork To RM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Driver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsAUkv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Marketing_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Marketing Coordinator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Email</field>
                <operation>contains</operation>
                <value>@accelentertainment.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendees_List_Purchased__c</fullName>
        <label>Attendees List Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendees_List_Sent_to_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendees List Sent to Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booth_Furnishes__c</fullName>
        <label>Booth Furnishes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Furnishings_Notes__c</fullName>
        <label>Booth Furnishings Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Notes__c</fullName>
        <label>Booth Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booth_Number__c</fullName>
        <label>Booth Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booth Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booth_Space__c</fullName>
        <label>Booth Space</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10x10</fullName>
                </value>
                <value>
                    <fullName>10x20</fullName>
                </value>
                <value>
                    <fullName>20x20</fullName>
                </value>
                <value>
                    <fullName>Golf Outing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booth_Transportation_Notes__c</fullName>
        <label>Booth Transportation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Carpet_Type__c</fullName>
        <label>Carpet Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charitable_Donation_Cost_501c3_only__c</fullName>
        <label>Charitable Donation Cost (501c3 only)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charitable_Organization_Address__c</fullName>
        <label>Charitable Organization Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charitable_Organization_City__c</fullName>
        <label>Charitable Organization City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charitable_Organization_Name__c</fullName>
        <label>Charitable Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charitable_Organization_State__c</fullName>
        <label>Charitable Organization State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date__c</fullName>
        <label>Check Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_in_Date__c</fullName>
        <label>Check in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Checkout_Depart_Date__c</fullName>
        <label>Checkout Depart Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cleaning_Type__c</fullName>
        <label>Cleaning Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Approval__c</fullName>
        <label>Compliance Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Waiting for approval</fullName>
                </value>
                <value>
                    <fullName>Needs Refinement</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts_Uploaded_to_HubSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacts Uploaded to HubSpot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Approval__c</fullName>
        <label>Cost Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Waiting for approval</fullName>
                </value>
                <value>
                    <fullName>Needs Refinement</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Share_Approved_Date__c</fullName>
        <label>Cost Share Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Percentage__c</fullName>
        <label>Cost Share Percentage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accel 50%, Location 50%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Share_Sent_Date__c</fullName>
        <label>Cost Share Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Share__c</fullName>
        <label>Cost Share?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Art_Approved_by_Mgr__c</fullName>
        <label>Date Art Approved by Mgr</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Art_Sent_to_Mgr__c</fullName>
        <label>Date Art Sent to Mgr</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Compliance_Approval_Rcvd__c</fullName>
        <label>Date Compliance Approval Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Cost_Approval_Rcvd__c</fullName>
        <label>Date Cost Approval Rcvd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ordered__c</fullName>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Quote_1_Finalized__c</fullName>
        <label>Date Quote #1 Finalized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_From_Vendor__c</fullName>
        <label>Date Received From Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_from_Event_Approver__c</fullName>
        <label>Date Received from Event Approver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Cost_Approval__c</fullName>
        <label>Date Sent for Cost Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Quote_1__c</fullName>
        <label>Date Sent for Quote #1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_for_Quote_2__c</fullName>
        <label>Date Sent for Quote #2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Compliance__c</fullName>
        <label>Date Sent to Compliance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Event_Approver__c</fullName>
        <label>Date Sent to Event Approver</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Edit_Request__c</fullName>
        <label>Date of Last Edit Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_returned_from_Graphic_Designer__c</fullName>
        <label>Date returned from Graphic Designer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_City__c</fullName>
        <label>Delivery City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_State__c</fullName>
        <label>Delivery State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Street__c</fullName>
        <label>Delivery Street</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Zip_Code__c</fullName>
        <label>Delivery Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depart_Time_to_Event__c</fullName>
        <inlineHelpText>Flight Departure Time when flying into the event.</inlineHelpText>
        <label>Depart Time (to Event)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Direct_Show_Shipment_Start_Date__c</fullName>
        <label>Direct Show Shipment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drop_off_Date__c</fullName>
        <label>Drop-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electric_Type__c</fullName>
        <label>Electric Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Notes__c</fullName>
        <inlineHelpText>Use for employees that may not have access to Salesforce.</inlineHelpText>
        <label>Employee Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employees_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employees Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Identification_Number_EIN__c</fullName>
        <label>Employer Identification Number (EIN)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_of_Attendees__c</fullName>
        <label>Estimated # of Attendees</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Email</field>
                <operation>contains</operation>
                <value>@accelentertainment.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Expenses_Notes__c</fullName>
        <label>Event Expenses Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Requester_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Requester Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Email</field>
                <operation>contains</operation>
                <value>@accelentertainment.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Result_Notes__c</fullName>
        <label>Event Result Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Golf Outing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Completion_Notes__c</fullName>
        <label>Expected Date of Completion Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Completion__c</fullName>
        <label>Expected Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expenses_Should_Hit_This_State__c</fullName>
        <label>Expenses Should Hit This State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania</fullName>
                </value>
                <value>
                    <fullName>New Market</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Artwork_on_Server__c</fullName>
        <label>Final Artwork on Server</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Free_Play_Offer__c</fullName>
        <label>Free Play Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Giveaway_Kit_Quantity__c</fullName>
        <label>Giveaway Kit Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Giveaway_Kits__c</fullName>
        <label>Giveaway Kits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Golfers_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golfers Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graphic_Designer_1__c</fullName>
        <label>Graphic Designer 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GD1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Graphic_Designer_2__c</fullName>
        <label>Graphic Designer 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GD2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handout_Types__c</fullName>
        <label>Handout Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handouts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_City__c</fullName>
        <label>Hotel City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Name__c</fullName>
        <label>Hotel Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_State__c</fullName>
        <label>Hotel State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Street__c</fullName>
        <label>Hotel Street</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Zip_Code__c</fullName>
        <label>Hotel Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGB_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGB Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Type__c</fullName>
        <label>Industry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-Store &amp; Truck Stop</fullName>
                </value>
                <value>
                    <fullName>Bar &amp; Restaurant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Fraternal</fullName>
                    <isActive>false</isActive>
                    <label>Fraternal</label>
                </value>
                <value>
                    <fullName>Parlor</fullName>
                    <isActive>false</isActive>
                    <label>Parlor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_Checkbox_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information Checkbox Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Date_Sent_to_Graphic_Designer__c</fullName>
        <label>Initial Date Sent to Graphic Designer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Notes__c</fullName>
        <label>Item Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Item1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Items_Returned_to_Warehouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Items Returned to Warehouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickoff_Meeting_Date__c</fullName>
        <label>Kickoff Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Retrieval_Service_Purchased__c</fullName>
        <label>Lead Retrieval Service Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_of_Machines__c</fullName>
        <label>List of Machines</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loading_Date__c</fullName>
        <label>Loading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Cost_Share_Percentage__c</fullName>
        <formula>100- Accel_Cost_Share_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Cost Share Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Machine_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Machine Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsAUxt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Machine_Notes__c</fullName>
        <label>Machine Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Machine_Type__c</fullName>
        <label>Machine Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VGTs</fullName>
                </value>
                <value>
                    <fullName>COAMS</fullName>
                </value>
                <value>
                    <fullName>M3T</fullName>
                </value>
                <value>
                    <fullName>NRT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailer_Drop_Date__c</fullName>
        <label>Mailer Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Main_Prize_Delivered_To_Winner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Prize Delivered To Winner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Prize_Quantity__c</fullName>
        <label>Main Prize Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Prize_Winner__c</fullName>
        <label>Main Prize Winner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Prize__c</fullName>
        <label>Main Prize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Vehicle__c</fullName>
        <label>Marketing Vehicle</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mgr_Approving_Art__c</fullName>
        <label>Mgr Approving Art</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Badges_Received__c</fullName>
        <label>Number of Badges Received</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Machines__c</fullName>
        <label>Number of Machines</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooms_Needed__c</fullName>
        <label>Number of Rooms Needed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Signed_Contracts__c</fullName>
        <label>Number of Signed Contracts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_iCapture_Scans__c</fullName>
        <label>Number of iCapture Scans</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Marketing</relationshipLabel>
        <relationshipName>Marketing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Email_Request_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A checked box indicates that the request was emailed to the charitable organization.</inlineHelpText>
        <label>Organization Email Request Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patron_Giveaway_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patron Giveaway Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pickup_Date__c</fullName>
        <label>Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_Show_Meeting_Date__c</fullName>
        <label>Post-Show Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Show_Meeting_Date__c</fullName>
        <label>Pre-Show Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Event_Contact_Information__c</fullName>
        <description>For Trade Shows</description>
        <inlineHelpText>Enter preferred contact&apos;s Name, Email, Phone#, and any other contact information.</inlineHelpText>
        <label>Preferred Event Contact &amp; Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>